<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/registerTextFieldsBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerBack"
        android:textColor="@color/colorBlackText"/>

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_textField_email_hint"
        android:textColorHint="@color/colorLightGrayHint"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
    android:id="@+id/registerPasswordEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_textField_password_hint"
    android:textColorHint="@color/colorLightGrayHint"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/registerRePasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_textField_re_password_hint"
        android:textColorHint="@color/colorLightGrayHint"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_textField_name_hint"
        android:textColorHint="@color/colorLightGrayHint"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/registerLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_textField_lastname_hint"
        android:textColorHint="@color/colorLightGrayHint"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/registerWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_textField_Weight_hint"
        android:textColorHint="@color/colorLightGrayHint"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/registerTextFieldsLoginImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorOrangeButton"
        android:text="@string/registerBtn"/>

</LinearLayout>